--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <title>FlashDrill</title>
-
+<meta name="base:app_id" content="69399a068a7c4e55fec73d11" />
   <!-- Open Graph -->
   <meta property="og:title" content="FlashDrill" />
   <meta property="og:description" content="FlashDrill is a micro flashcard trainer: flip, mark again or got it, and keep a simple streak of what you’ve learned." />
-  <meta property="og:image" content="https://flashdrill-miniapp.vercel.app/assets/hero.png" />
-  <meta property="og:url" content="https://flashdrill-miniapp.vercel.app/" />
+  <meta property="og:image" content="https://note-tb1r.vercel.app/assets/hero.png" />
+  <meta property="og:url" content="https://note-tb1r.vercel.app/" />
   <meta property="og:type" content="website" />
 
   <!-- Farcaster Mini App embed -->
@@ -16,14 +16,14 @@
     name="fc:miniapp"
     content='{
       "version":"1",
-      "imageUrl":"https://flashdrill-miniapp.vercel.app/assets/embed-3x2.png",
+      "imageUrl":"https://note-tb1r.vercel.app/assets/embed-3x2.png",
       "button":{
         "title":"FlashDrill",
         "action":{
           "type":"launch_frame",
           "name":"FlashDrill",
-          "url":"https://flashdrill-miniapp.vercel.app/",
-          "splashImageUrl":"https://flashdrill-miniapp.vercel.app/assets/splash.png",
+          "url":"https://note-tb1r.vercel.app/",
+          "splashImageUrl":"https://note-tb1r.vercel.app/assets/splash.png",
           "splashBackgroundColor":"#020617"
         }
       }
